// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RemainingTime /> should not render 0 days if no props 1`] = `
<FormattedMessage
  id="global.remaining.days"
  values={
    Object {
      "num": 0,
    }
  }
/>
`;

exports[`<RemainingTime /> should render the number of days if hours is not provided 1`] = `
<FormattedMessage
  id="global.remaining.days"
  values={
    Object {
      "num": 2,
    }
  }
/>
`;

exports[`<RemainingTime /> should render the number of hours if provided 1`] = `
<FormattedMessage
  id="global.remaining.hours"
  values={
    Object {
      "num": 2,
    }
  }
/>
`;
